Added credits and license info for Pleiades Map Data

--- a/SAAOSX/TextEdition/TextEdition.storyboard
+++ b/SAAOSX/TextEdition/TextEdition.storyboard
@@ -141,7 +141,7 @@
                                     <button key="view" verticalHuggingPriority="750" id="8Vb-bM-8ib">
                                         <rect key="frame" x="0.0" y="14" width="71" height="25"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <buttonCell key="cell" type="roundTextured" title="MapView" bezelStyle="texturedRounded" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="WOF-T4-y4W">
+                                        <buttonCell key="cell" type="roundTextured" title="Map" bezelStyle="texturedRounded" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="WOF-T4-y4W">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
                                         </buttonCell>
