--- a/SAAiOS/TextEdition/TextEdition.storyboard
+++ b/SAAiOS/TextEdition/TextEdition.storyboard
@@ -13,30 +13,13 @@
         <!--TextEdition-->
         <scene sceneID="yUG-lL-AsK">
             <objects>
-                <viewController storyboardIdentifier="TextEditionViewController" title="TextEdition" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JEX-9P-axG" customClass="TextEditionViewController" customModule="SAAi" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TextEditionViewController" title="TextEdition" id="JEX-9P-axG" customClass="TextEditionViewController" customModule="SAAi" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="svH-Pt-448">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="6Ub-vI-gXG">
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="6Ub-vI-gXG">
                                 <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
-                                <subviews>
-                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A9y-1y-g5a">
-                                        <rect key="frame" x="0.0" y="0.0" width="507" height="748"/>
-                                        <connections>
-                                            <segue destination="2Xm-Fx-EDf" kind="embed" id="r5G-KF-sNI"/>
-                                        </connections>
-                                    </containerView>
-                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qZd-cU-bNl">
-                                        <rect key="frame" x="517" y="0.0" width="507" height="748"/>
-                                        <connections>
-                                            <segue destination="2Xm-Fx-EDf" kind="embed" id="M9s-Ll-soL"/>
-                                        </connections>
-                                    </containerView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="qZd-cU-bNl" firstAttribute="width" secondItem="A9y-1y-g5a" secondAttribute="width" id="bFr-lV-hmQ"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -51,8 +34,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
                     <connections>
-                        <outlet property="primaryContainerView" destination="A9y-1y-g5a" id="sKg-xO-zJR"/>
-                        <outlet property="secondaryContainerView" destination="qZd-cU-bNl" id="8YH-Xp-Wpn"/>
+                        <outlet property="stackView" destination="6Ub-vI-gXG" id="nde-iC-aF0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
@@ -62,20 +44,20 @@
         <!--Text Panel View Controller-->
         <scene sceneID="RfG-W3-FOO">
             <objects>
-                <viewController storyboardIdentifier="TextPanelViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2Xm-Fx-EDf" customClass="TextPanelViewController" customModule="SAAi" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TextPanelViewController" id="2Xm-Fx-EDf" customClass="TextPanelViewController" customModule="SAAi" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fpk-cV-miu">
-                        <rect key="frame" x="0.0" y="0.0" width="507" height="748"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gCf-wZ-KKp">
-                                <rect key="frame" x="10" y="30" width="487" height="670"/>
+                                <rect key="frame" x="10" y="30" width="1004" height="690"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="5e5-qn-tx9">
-                                <rect key="frame" x="10" y="710" width="487" height="29"/>
+                                <rect key="frame" x="10" y="730" width="1004" height="29"/>
                                 <segments>
                                     <segment title="Cuneiform"/>
                                     <segment title="Transliteration"/>
@@ -169,10 +151,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cPi-0l-sFZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1621" y="133"/>
+            <point key="canvasLocation" x="1358" y="50"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="r5G-KF-sNI"/>
-    </inferredMetricsTieBreakers>
 </document>
